--- a/src/app/components/common/table/table.component.html
+++ b/src/app/components/common/table/table.component.html
@@ -9,5 +9,5 @@
 	</ng-container>
 	
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-	<tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="getSelected(row)"></tr>
+	<tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index;" (click)="getSelected(row, i)"></tr>
 </table>
