--- a/src/app/components/common/dialog/dialog.component.html
+++ b/src/app/components/common/dialog/dialog.component.html
@@ -4,13 +4,13 @@
       *ngFor="let field of values; let i = index">
         <span *ngIf="exception.indexOf(keys[i]) < 0" class="fieldTitle">{{keys[i].toUpperCase()}}:</span>&nbsp;&nbsp;
         <span *ngIf="exception.indexOf(keys[i]) < 0" class="fieldValue">
-          <input matInput [(ngModel)]="qtd[keys[i]]" [disabled]="disabled.indexOf(keys[i]) >= 0" />
+          <input matInput [(ngModel)]="tempQtd[keys[i]]" [disabled]="disabled.indexOf(keys[i]) >= 0" />
         </span>
    </div>
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button (click)="onCancelClick()">Cancel</button>
-    <button mat-button *ngIf="qtd.dialogType != 'insert'" (click)="onDeleteClick()">Delete</button>
-    <button mat-button *ngIf="qtd.dialogType != 'insert'" (click)="onSaveClick()">Update</button>
-    <button mat-button *ngIf="qtd.dialogType == 'insert'" (click)="onInsertClick()">Insert</button>
+    <button mat-button *ngIf="tempQtd.dialogType != 'insert'" (click)="onDeleteClick()">Delete</button>
+    <button mat-button *ngIf="tempQtd.dialogType != 'insert'" (click)="onUpdateClick()">Update</button>
+    <button mat-button *ngIf="tempQtd.dialogType == 'insert'" (click)="onInsertClick()">Insert</button>
 </mat-dialog-actions>
